# gnome-builder

./: meson_options.txt
libide/: ide-context.c  ide-context.h  ide-types.h  ide.h  meson.build
libide/buffers/: ide-buffer.c
libide/buildsystem/: ide-build-system.c
libide/plugins/: ide-extension-set-adapter.c
libide/sourceview/: ide-source-view.c
libide/symbols/: ide-ast-indexer.c  ide-ast-indexer.h  ide-code-index-entry.c  ide-code-index-entry.h  ide-code-indexer.c  ide-code-indexer.h
plugins/: meson.build
plugins/clang/: clang-plugin.c  ide-clang-ast-indexer.c  ide-clang-ast-indexer.h  ide-clang-code-index-entries.c  ide-clang-code-index-entries.h  ide-clang-code-index-entry.c  ide-clang-code-index-entry.h  ide-clang-code-indexer.c  ide-clang-service.c  ide-clang-service.h  ide-clang-translation-unit.c  ide-clang-translation-unit.h  meson.build
plugins/code-index/: ide-code-index-builder.c  ide-code-index-builder.h  ide-code-index-index.c  ide-code-index-index.h  ide-code-index-search-provider.c  ide-code-index-search-result.c  ide-code-index-service.c  ide-code-index-symbol-resolver.c  ide-persistent-map-builder.c  ide-persistent-map.c  ide-persistent-map.h
plugins/flatpak/: gbp-flatpak-pipeline-addin.c  gbp-flatpak-runtime.c
plugins/indexer/: configure.ac  ide-indexer-builder.c  ide-indexer-builder.h  ide-indexer-index-builder.c  ide-indexer-index-builder.h  ide-indexer-index.c  ide-indexer-index.h  ide-indexer-service.c  ide-indexer-service.h  indexer-plugin.c  indexer.plugin  meson.build
plugins/indexer/tool/: ide-ast-indexer.c  ide-ast-indexer.h  ide-simple-table-builder.c  ide-simple-table-builder.h  ide-simple-table.c  ide-simple-table.h  main.c  meson.build
plugins/symbol-tree/: gbp-symbol-layout-stack-addin.c
tests/: meson.build
